tests/baselines/reference/classExtendingPrimitive.errors.txt
==== tests/cases/compiler/classExtendingPrimitive.ts (11 errors) ====
    // classes cannot extend primitives
    
    class C extends number { }
                    ~~~~~~
!!! error TS2073: A class may only extend another class.
    class C2 extends string { }
                     ~~~~~~
!!! error TS2073: A class may only extend another class.
    class C3 extends boolean { }
                     ~~~~~~~
!!! error TS2073: A class may only extend another class.
    class C4 extends Void  { }
                     ~~~~
!!! error TS2095: Could not find symbol 'Void'.
    class C4a extends void {}
                      ~~~~
!!! error TS1008: Unexpected token; 'type name' expected.
    class C5 extends Null { }
                     ~~~~
!!! error TS2095: Could not find symbol 'Null'.
    class C5a extends null { }
                      ~~~~
!!! error TS1008: Unexpected token; 'type name' expected.
                           ~
!!! error TS1005: ';' expected.
    class C6 extends undefined { }
                     ~~~~~~~~~
!!! error TS2095: Could not find symbol 'undefined'.
    class C7 extends Undefined { }
                     ~~~~~~~~~
!!! error TS2095: Could not find symbol 'Undefined'.
    
    enum E { A }
    class C8 extends E { }
                     ~
!!! error TS2073: A class may only extend another class.